fix .project-links margin on tablets

--- a/style.css
+++ b/style.css
@@ -620,6 +620,10 @@ textarea:focus {
         padding-left: 5px;
         padding-right: 5px;
     }
+    .project-links {
+        margin-top: 35px;
+}
+
 }
 
 @media only screen and (min-width: 766px)and (max-width: 769px) {
